# AI-Requirement-Intelligence-Assistant

./: .gitignore  main.py  pyproject.toml
app/: config.py  database.py  graph.py  models.py  parser.py  routes.py  schemas.py  services.py  state.py
app/agents/: ambiguity_checker.py  analysis_agent.py  conflict_detector.py  json_formatter.py  llm.py  synthesis_agent.py  validation_agent.py
app/old_agents/: README.py  dependency_finder.py  missing_requirement_detector.py  priority_classifier.py  requirement_extractor.py  search_tool.py  stakeholder_detector.py  summary_generator.py  user_story_generator.py  validation_tool.py
app/tools/: requirement_tools.py
scripts/: generate_graph.py
