[project]
name = "ai-requirement-intelligence-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.114.0",
    "fastapi[standard]>=0.139.2",
    "langchain>=1.3.14",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "langsmith>=0.10.9",
    "motor>=3.7.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]
